--- a/Discrete_Continuous.html
+++ b/Discrete_Continuous.html
@@ -330,7 +330,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="crow_logo.png" alt="CROW Logo" class="logo">
+        <img src="images/crow_logo.png" alt="CROW Logo" class="logo">
         <h1>Sort the Stats: Discrete vs. Continuous</h1>
         <div class="instructions">
             <p>Drag each AFL statistic into the correct category: Discrete or Continuous.</p>
