--- a/Handwash.html
+++ b/Handwash.html
@@ -117,7 +117,7 @@
       left: 0;
       width: 10cm;
       height: 10cm;
-      background-image: url('hand-2.png');
+      background-image: url('images/hand-2.png');
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
@@ -515,10 +515,10 @@
   </div>
   <footer>
     <div class="logo-bar">
-      <img src="foundation-logo.jpg" alt="Crows Foundation Logo" />
-      <img src="bibbulmund-logo.png" alt="Bibbulmun Fund Logo" />
-      <img src="anangu-logo.png" alt="Anangu Foundation Logo" />
-      <img src="NHC_Logo.jpg" alt="Nganampa Health Council Logo" />
+      <img src="images/foundation-logo.jpg" alt="Crows Foundation Logo" />
+      <img src="images/bibbulmund-logo.png" alt="Bibbulmun Fund Logo" />
+      <img src="images/anangu-logo.png" alt="Anangu Foundation Logo" />
+      <img src="images/NHC_Logo.jpg" alt="Nganampa Health Council Logo" />
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
